--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script src="generativedesign.js" type="module"></script>
+    <script src="interactivedesign.js" type="module"></script>
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
 </head>
 
